--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" name=viewport><meta content=yes name=apple-mobile-web-app-capable><meta content=black name=apple-mobile-web-app-status-bar-style><meta content="telephone=no" name=format-detection><meta content="email=no" name=format-detection><meta content=yes name=apple-mobile-web-app-capable><meta content=yes name=apple-touch-fullscreen><meta content="telephone=no,email=no" name=format-detection><title>我的vue.js的项目</title><link rel=stylesheet href=static/font-awesome-4.7.0/css/font-awesome.min.css><link rel=stylesheet href=static/css/index.css><script type=text/javascript src=static/js/index.js></script><link href=/static/css/app.77a367fc1221091d978a4b7df070f589.css rel=stylesheet></head><body><div id=pp></div><script type=text/javascript src=/static/js/manifest.7a6e9f0a00bd5128a27c.js></script><script type=text/javascript src=/static/js/vendor.ac340adbee751fad796f.js></script><script type=text/javascript src=/static/js/app.db2d49a71b101325fd37.js></script></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+		<meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
+		<meta content="yes" name="apple-mobile-web-app-capable">
+		<meta content="black" name="apple-mobile-web-app-status-bar-style">
+		<meta content="telephone=no" name="format-detection">
+		<meta content="email=no" name="format-detection">
+		<meta content="yes" name="apple-mobile-web-app-capable"> 
+		<meta content="yes" name="apple-touch-fullscreen"> 
+		<meta content="telephone=no,email=no" name="format-detection"> 
+		<meta name="panqixing" content="QQ:1071438646">
+		<title>我的vue.js的项目</title>
+		<link rel="stylesheet" href="./static/font-awesome-4.7.0/css/font-awesome.min.css" />
+		<link rel="stylesheet" href="./static/css/index.css" />
+		<script type="text/javascript" src="./static/js/index.js"></script>
+  </head>
+  <body>
+    <div id="pp"></div>
+    <!-- built files will be auto injected -->
+  </body>
+</html>
